added uppermoon section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -110,6 +110,8 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column; 
+    gap: 5px;
     background: rgba(0, 0, 0, 0.4);
     backdrop-filter: blur(3px);
     color: white;
@@ -126,4 +128,29 @@
 
 .img-hover-card:hover .hover-text {
     opacity: 1;
+}
+
+/* uppermoons */
+.uppermoonSection .uppermoonName {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    font-weight: 800;
+    font-size: 40px;
+}
+
+.uppermoonSection h5 {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    }
+
+.uppermoonSection p {
+    font-family: 'Poppins', sans-serif;
+    color: white;
+    }
+
+.uppermoonCard .img-hover-card {
+    position: relative;
+    width: 100%;
+    overflow: hidden;
+    border-radius: 15px;
 }
